--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.3.0",
     "joi": "^17.13.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.451.0",
