--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
